--- a/style.css
+++ b/style.css
@@ -1,11 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap');
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   font-family: 'Montserrat', sans-serif;
   background-color: #f2f2f2;
   color: #111;
-  margin: 0;
-  padding: 0;
 }
 
 header {
@@ -73,6 +77,8 @@ nav a:hover {
   color: white;
   text-align: center;
   padding: 60px 20px;
+  position: relative;
+  z-index: 1;
 }
 
 .cta-btn-wrap {
